Getting DB Ryvr Working at Rest API
